--- a/style/_val.styl
+++ b/style/_val.styl
@@ -1,5 +1,5 @@
 main-color = #00BCD4;
-hi-lite-color = #FFEB3B;
+hi-light-color = #FFEB3B;
 gray-color = #F5F5F5;
 font-normal = Open Sans, sans-serif;
 font-condensed = Open Sans Condensed, sans-serif;
