--- a/style/_val.styl
+++ b/style/_val.styl
@@ -1,6 +1,7 @@
 main-color = #00BCD4;
 hi-light-color = #FFEB3B;
 gray-color = #F5F5F5;
+color-red = #ff8f8f;
 font-normal = Open Sans, sans-serif;
 font-condensed = Open Sans Condensed, sans-serif;
 
